--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/allythiel/RPSLS/issues"
   },
-  "homepage": "https://github.com/allythiel/RPSLS#readme"
+  "homepage": "https://github.com/allythiel/RPSLS#readme",
+  "dependencies": {
+    "prompt-sync": "^4.2.0"
+  }
 }
